dev_pro_1_pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: pod1
  namespace: ts
spec:
  containers:
    - name: podc
      image: heartocean/docom:tag
      ports:
        - name: tomport
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: ser1
  namespace: ts
spec:
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: tomport
      nodePort: 30000
