k8s_pipe1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavNew
  namespace: ts
spec: 
  selector:
    matchLabels:
      name: maven
  replicas: 2 
  template:
    metadata:
      labels:
        name: maven
    spec:
      containers:
      - name: mavenc
        image: heartocean/k8s:Tag
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mavenserv
  namespace: ts
spec:
  type: NodePort
  selector:
    name: maven
  ports:
  - port: 80
    targetPort: 8080
    nodePort: 30999
