pro1_service1.yaml
apiVersion: v1
kind: Service
metadata: 
  name: ingreserv1
  namespace: ts
spec: 
  type: NodePort 
  selector:
      app: app1
  ports:
    - port: 80
      targetPort: tomp
      nodePort: 30001
