pro1_ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: learn1ingress
  namespace: ts
spec:
  ingressClassName: nginx
  rules:
    - host: "af47e5bc009d541658a7f6debb1efd87-1509577740.ap-south-1.elb.amazonaws.com"
      http:
        paths:
          - path: "/"
            pathType: Prefix
              backend: 
                service: 
                  name: ingreserv1 
                  port:
                    number: 80
          - path: '/maven-web-app'
            pathType: Prefix
              backend:
                service:
                  name: ingreserv1
                  port: 
                    number: 80
